                  - fixed showing same iface twice on netstat input
                  pre2:
                  - added outfile and daemonize for html output
                  - fixes for IRIX
                  - added bit/second output (Michael Eckhoff)
                  - added errors/s output
                  - removed -p and -b, added -u/--unit <value>
                  - added max stats (--type,-t and 't')
                  - added sum stats
                  - move alot functions from retrieve.c into process.c
  12-20-2004 0.4: pre1:
                  - get_iface_stats cleanup
                  - plain and csv output added
                  - splited the big bwm-ng.c
                  - interface list added (whitelist)
                  - -lncurses instead of -lcurses, hope this will work on more
                    boxes
                  pre2:
                  - html output added, bwm-ng.css prolly needs alot of tweaking
                  pre3:
                  - added BSD support via sysctl (only fbsd tested yet)
                  - fixed gcc warnings on old/non x86 systems
                  - added errors output (inverse in curses)
                  - added libstatgrap support 
                  - another get_iface_stats cleanup/split
                  - Makefile edit (added options)
                  - fixed removed interfaces can cause a blank line
                  - added -D__CURSES, if not defined, you can build without
                    libcurses
                  - changed plain output with count>1 to almost the same as
                    curses output except inputkeys and errors support
                  - added -D__HTML and -D__CSV to select output at compiletime
                  pre4 and final:
                  - added configure script and config.h
                  - changed input_method handling (cycling while running works 
                    now for all methods)