@@ -82,7 +82,7 @@ Input:
 Output:
   -o, --output <method>   output method, one of: plain, curses, csv, html
   -u, --unit <value>      unit to show. one of bytes, bits, packets, errors
-  -T, --type <value>      type of stats. one of rate, max, sum
+  -T, --type <value>      type of stats. one of rate, max, sum, avg
   -C, --csvchar <char>    delimiter for csv
   -F, --outfile <file>    output file for csv and cvs (default stdout)
   -H, --htmlrefresh <num> meta refresh for html output
@@ -99,7 +99,8 @@ Keybindings (curses only):
                  only up and not hidden
   's'     sum hidden ifaces to total aswell or not
   'n'     cycle: input methods
-  'p'     switch show packets or Byte/s
+  'u'     cycle: bytes,bits,packets,errors
+  't'     cycle: current rate, max, sum since start, average for last 30 sec
 	
 
 Configfile
