@@ -1,5 +1,5 @@
 /******************************************************************************
- *  bwm-ng                                                                    *
+ *  bwm-ng help header                                                        *
  *                                                                            *
  *  Copyright (C) 2004 Volker Gropp (vgropp@pefra.de)                         *
  *                                                                            *
@@ -21,56 +21,9 @@
  *                                                                            *
  *****************************************************************************/
 
+#include "defines.h"
+#include "types.h"
 
-struct inout_long {
-    unsigned long long in;
-    unsigned long long out;
-};
-
-struct inouttotal_double {
-    long double in;
-    long double out;
-    long double total;
-};
-
-struct double_types {
-    struct inouttotal_double bytes;
-    struct inouttotal_double packets;
-    struct inouttotal_double errors;
-};
-
-struct iface_speed_stats {
-    struct inout_long bytes;
-    struct inout_long packets;
-    struct inout_long errors;
-};
-
-typedef struct iface_speed_stats t_iface_speed_stats;
-
-struct double_list {
-    struct double_types data;
-    struct double_list *next;
-};
-
-struct t_avg {
-    struct double_list *first;
-    struct double_list *last;
-    /* number of items in list */
-    int items;
-    /* cached current avg values */
-    struct double_types value;
-};
-
-struct iface_stats {
-    char    *if_name;
-    t_iface_speed_stats data;
-    struct double_types max;
-    struct iface_speed_stats sum;
-    struct t_avg avg;
-#if HAVE_GETTIMEOFDAY
-    struct timeval time;
-#endif
-};
-
-typedef struct iface_stats t_iface_stats;
+/* print cmdline help */
+inline void cmdln_printhelp() FUNCATTR_NORETURN;
 
