@@ -1,5 +1,5 @@
 /******************************************************************************
- *  bwm-ng parsing stuff                                                      *
+ *  bwm-ng handle cmdline and config file options                             *
  *                                                                            *
  *  Copyright (C) 2004 Volker Gropp (vgropp@pefra.de)                         *
  *                                                                            *
@@ -53,72 +53,6 @@ static char* getToken(char** str, const char* delims)
 /******************************************************************************/
 #endif
 
-inline void print_help_line(char *short_c,char * long_c,char *descr) {
-#ifdef LONG_OPTIONS
-    printf("  %-23s",long_c);
-#else
-    printf("  %-23s",short_c);
-#endif
-    printf(" %s\n",descr);
-}
-
-/* prints a helpscreen and exists */
-inline void printhelp() FUNCATTR_NORETURN;
-inline void printhelp() {
-    print_version;
-    printf("USAGE: bwm-ng [OPTION] ...");
-#if CONFIG_FILE    
-    printf(" [CONFIGFILE]\n");
-#else
-    printf("\n");
-#endif    
-    printf("displays current ethernet interfaces stats\n\n");
-    printf("Options:\n");
-    print_help_line("-t <msec>","-t, --timeout <msec>","displays stats every <msec> (1msec = 1/1000sec)");
-    print_help_line("","","default: 500");
-    print_help_line("-d","-d, --dynamic","show values dynamicly (Byte KB or MB)");
-    print_help_line("-a [mode]","-a, --allif [mode]","where mode is one of:");
-    print_help_line("","","0=show only up (and selected) interfaces");
-    print_help_line("","","1=show all up interfaces (default)");
-    print_help_line("","","2=show all and down interfaces");
-    print_help_line("-I <list>","-I, --interfaces <list>","show only interfaces in <list> (comma seperated), or");
-    print_help_line("","","if list is prefaced with %% show all but interfaces");
-    print_help_line("","","in list");
-    print_help_line("-S","-S, --sumhidden","count hidden interfaces for total");
-    print_help_line("-D","-D, --daemon","fork into background and daemonize");
-    print_help_line("-h","-h, --help","displays this help");
-    print_help_line("-V","-V, --version","print version info");
-	printf("\nInput:\n");
-	print_help_line("-i <method>","-i, --input <method>","input method, one of:" INPUT_METHODS);
-#ifdef PROC_NET_DEV
-    print_help_line("-f <file>","-f, --procfile <file>","filename to read raw data from. (" PROC_NET_DEV ")");
-#endif
-#if ALLOW_NETSTATPATH
-#ifdef NETSTAT
-    print_help_line("-n <path>","-n, --netstat <path>","use <path> as netstat binary");
-#endif	
-#endif    
-	printf("\nOutput:\n");
-    print_help_line("-o <method>","-o, --output <method>","output method, one of: " OUTPUT_METHODS);
-    print_help_line("-u","-u, --unit <value>","unit to show. one of bytes, bits, packets, errors");
-    print_help_line("-T","-T, --type <value>","type of stats. one of rate, max, sum");
-#ifdef CSV
-    print_help_line("-C <char>","-C, --csvchar <char>","delimiter for csv");
-#endif    
-#if CSV || HTML    
-	print_help_line("-F <file>","-F, --outfile <file>","output file for csv and html (default stdout)");
-#endif
-#ifdef HTML
-	print_help_line("-R <num>","-R, --htmlrefresh <num>","meta refresh for html output");
-	print_help_line("-H","-H, --htmlheader","show <html> and <meta> frame for html output");
-#endif
-    print_help_line("-c <num>","-c, --count <num>","number of query/output for plain & csv");
-    print_help_line("","","(ie 1 for one single output)");
-    printf("\n");
-    exit(0);
-}
-
-
 inline int str2output_unit(char *optarg) {
     if (optarg) {
         if (!strcasecmp(optarg,"bytes")) return BYTES_OUT;
@@ -134,6 +68,7 @@ inline int str2output_type(char *optarg) {
         if (!strcasecmp(optarg,"rate")) return RATE_OUT;
         if (!strcasecmp(optarg,"max")) return MAX_OUT;
         if (!strcasecmp(optarg,"sum")) return SUM_OUT;
+        if (!strcasecmp(optarg,"avg")) return AVG_OUT;
     }
     return RATE_OUT;
 }
@@ -394,7 +329,7 @@ void get_cmdln_options(int argc, char *argv[]) {
 				break;
 #endif
             case 'h':
-                printhelp();
+                cmdln_printhelp();
                 break;
 #ifdef PROC_NET_DEV
 			case 'f':
@@ -425,6 +360,7 @@ void get_cmdln_options(int argc, char *argv[]) {
                 break;
             case 'T':
                 output_type=str2output_type(optarg);
+                break;
             case 'd':
                 dynamic=1;
                 break;
